Separated Publish and Subscribe
Moved the calls to Subscribe<T>() and Publish<T>() into their own
classes.

--- a/RabbitGettingStarted/Subscriber/Subscriber.csproj
+++ b/RabbitGettingStarted/Subscriber/Subscriber.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusFactory.cs" />
+    <Compile Include="DemoSubscriber.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
