--- a/RabbitGettingStarted/Publisher/Publisher.csproj
+++ b/RabbitGettingStarted/Publisher/Publisher.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusFactory.cs" />
+    <Compile Include="DemoPublisher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
