Showing federated queues with EasyNetQ.

--- a/MoreRabbitFederations/Federations.FooConsole/App.config
+++ b/MoreRabbitFederations/Federations.FooConsole/App.config
@@ -4,12 +4,8 @@
         <section name="castle" type="Castle.Windsor.Configuration.AppDomain.CastleSectionHandler, Castle.Windsor" />
     </configSections>
     <connectionStrings>
-        <add name="brokera" connectionString="host=brokera;virtualHost=FederationDemo;username=FederationsConsoleApp;password=spiffy;" />
-        <add name="brokerb" connectionString="host=brokerb;virtualHost=FederationsUser;username=;password=;" />
+        <add name="rabbit" connectionString="amqps://FooConsoleApp:demo@brokera:5671/FederationDemo" />
     </connectionStrings>
-    <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
     <castle>
         <components>
             <!--<component id="ServiceDescription" type="TopShelfWcfExample.ConsoleApp.ServiceDescription, WcfExample">
@@ -21,4 +17,7 @@
               </component>-->
         </components>
     </castle>
+    <startup>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    </startup>
 </configuration>
