--- a/MoreRabbitFederations/Federations.Messages/Federations.Messages.csproj
+++ b/MoreRabbitFederations/Federations.Messages/Federations.Messages.csproj
@@ -39,12 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Message.cs" />
+    <Compile Include="Hello.cs" />
+    <Compile Include="Goodbye.cs" />
+    <Compile Include="HowAreYou.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Pings\" />
-    <Folder Include="Pongs\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
