--- a/MoreRabbitFederations/Federations.FooConsole/Federations.FooConsole.csproj
+++ b/MoreRabbitFederations/Federations.FooConsole/Federations.FooConsole.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9ECA9883-9769-4BE9-9264-BE4455E7C777}</ProjectGuid>
+    <ProjectGuid>{7FA29DE0-3679-404E-A92E-5A3881EC76A0}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Federations.ConsoleApp</RootNamespace>
-    <AssemblyName>Federations.ConsoleApp</AssemblyName>
+    <RootNamespace>Federations.FooConsole</RootNamespace>
+    <AssemblyName>Federations.FooConsole</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,10 +39,10 @@
       <HintPath>..\packages\Castle.Windsor.3.2.1\lib\net45\Castle.Windsor.dll</HintPath>
     </Reference>
     <Reference Include="EasyNetQ">
-      <HintPath>..\packages\EasyNetQ.0.26.1.193\lib\net40\EasyNetQ.dll</HintPath>
+      <HintPath>..\packages\EasyNetQ.0.26.2.194\lib\net40\EasyNetQ.dll</HintPath>
     </Reference>
     <Reference Include="EasyNetQ.DI.Windsor">
-      <HintPath>..\packages\EasyNetQ.DI.Windsor.0.26.1.193\lib\net40\EasyNetQ.DI.Windsor.dll</HintPath>
+      <HintPath>..\packages\EasyNetQ.DI.Windsor.0.26.2.194\lib\net40\EasyNetQ.DI.Windsor.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
@@ -51,7 +51,6 @@
       <HintPath>..\packages\RabbitMQ.Client.3.1.5\lib\net30\RabbitMQ.Client.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -60,8 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectionStrings.cs" />
-    <Compile Include="Conversation.cs" />
+    <Compile Include="Foo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -76,12 +74,25 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Federations.BarMessages\Federations.BarMessages.csproj">
+      <Project>{BD8B886A-EBDD-4A93-AD60-73B310216122}</Project>
+      <Name>Federations.BarMessages</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Federations.BrokerLibrary\Federations.BrokerLibrary.csproj">
+      <Project>{43BF5FC2-A4A5-4632-B337-40B4BA4E120B}</Project>
+      <Name>Federations.BrokerLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Federations.FooMessages\Federations.FooMessages.csproj">
+      <Project>{F257B003-5627-4181-97A4-1896632B0ABC}</Project>
+      <Name>Federations.FooMessages</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
