Some cleanups of the examples.

--- a/MoreRabbitFederations/Federations.BarConsole/App.config
+++ b/MoreRabbitFederations/Federations.BarConsole/App.config
@@ -4,7 +4,7 @@
         <section name="castle" type="Castle.Windsor.Configuration.AppDomain.CastleSectionHandler, Castle.Windsor" />
     </configSections>
     <connectionStrings>
-        <add name="rabbit" connectionString="amqp://BarConsoleApp:demo@brokerb/FederationDemo" />
+        <add name="rabbit" connectionString="amqp://BarConsoleApp:demo@brokerb/FederatedStuff" />
     </connectionStrings>
     <castle>
         <components>
