--- a/PolyMapExample/PolyMap.UnitTests/packages.config
+++ b/PolyMapExample/PolyMap.UnitTests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.2.1" targetFramework="net45" />
   <package id="FakeItEasy" version="1.22.0" targetFramework="net45" />
   <package id="FluentAssertions" version="3.0.107" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
