--- a/PolyMapExample/PolyMap.UnitTests/PolyMap.UnitTests.csproj
+++ b/PolyMapExample/PolyMap.UnitTests/PolyMap.UnitTests.csproj
@@ -86,6 +86,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MappedPublisherTests.cs" />
     <Compile Include="OverloadedAutomappingPublisherTests.cs" />
     <Compile Include="OverloadedPublisherTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
