--- a/PolyMapExample/PolyMap/PolyMap.csproj
+++ b/PolyMapExample/PolyMap/PolyMap.csproj
@@ -48,8 +48,11 @@
     <Compile Include="Command.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="IBus.cs" />
+    <Compile Include="IPublisher.cs" />
+    <Compile Include="MappedPublisher.cs" />
     <Compile Include="OverloadedAutomappingPublisher.cs" />
     <Compile Include="OverloadedPublisher.cs" />
+    <Compile Include="Processed.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Start.cs" />
     <Compile Include="Started.cs" />
