--- a/TddExamples/TddExamples.Naming.Tests/TddExamples.Naming.Tests.csproj
+++ b/TddExamples/TddExamples.Naming.Tests/TddExamples.Naming.Tests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddingNumbersTests.cs" />
     <Compile Include="Capture.cs" />
     <Compile Include="ContextSpecification.cs" />
     <Compile Include="IntegrationAttribute.cs" />
