--- a/NancyAspNetOwin/NancyAspNetOwin.WebApp/Web.config
+++ b/NancyAspNetOwin/NancyAspNetOwin.WebApp/Web.config
@@ -1,22 +1,28 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <configuration>
-    <appSettings>
-        <add key="owin:HandleAllRequests" value="true" />
-    </appSettings>
-    <system.web>
-        <compilation debug="true" targetFramework="4.5.1" />
+  <appSettings>
+    <add key="owin:HandleAllRequests" value="true"/>
+  </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
-        <pages controlRenderingCompatibilityVersion="4.0" />
-        <httpHandlers>
-            <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-        </httpHandlers>
-    </system.web>
-
-    <system.webServer>
-        <validation validateIntegratedModeConfiguration="false" />
-        <httpErrors existingResponse="PassThrough" />
-        <handlers>
-            <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-        </handlers>
-    </system.webServer>
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.6" />
+      </system.Web>
+  -->
+  <system.web>
+    <compilation debug="true" targetFramework="4.6"/>
+    <pages controlRenderingCompatibilityVersion="4.0"/>
+    <httpHandlers>
+      <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
+    </httpHandlers>
+  </system.web>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false"/>
+    <httpErrors existingResponse="PassThrough"/>
+    <handlers>
+      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
+    </handlers>
+  </system.webServer>
 </configuration>
