--- a/NancyAspNetOwin/NancyAspNetOwin.WebApp/NancyAspNetOwin.WebApp.csproj
+++ b/NancyAspNetOwin/NancyAspNetOwin.WebApp/NancyAspNetOwin.WebApp.csproj
@@ -118,7 +118,7 @@
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
-    <Content Include="Scripts\jquery.cookie.js" />
+    <Content Include="Scripts\js.cookie.js" />
     <Content Include="Scripts\knockout-3.3.0.debug.js" />
     <Content Include="Scripts\knockout-3.3.0.js" />
     <Content Include="Scripts\r.js" />
@@ -144,6 +144,7 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <Content Include="Scripts\jquery-2.1.4.min.map" />
+    <Content Include="Scripts\knockout.cookie.js" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
