--- a/NancyWithTokens/NancyWithTokens.WebSite.Tests/packages.config
+++ b/NancyWithTokens/NancyWithTokens.WebSite.Tests/packages.config
@@ -3,8 +3,10 @@
   <package id="CsQuery" version="1.3.4" targetFramework="net461" />
   <package id="FakeItEasy" version="2.3.1" targetFramework="net461" />
   <package id="FluentAssertions" version="4.16.0" targetFramework="net461" />
+  <package id="JWT" version="1.3.4" targetFramework="net461" />
   <package id="Nancy" version="1.4.3" targetFramework="net461" />
   <package id="Nancy.Hosting.Aspnet" version="1.4.1" targetFramework="net461" />
   <package id="Nancy.Testing" version="1.4.1" targetFramework="net461" />
+  <package id="NBuilder" version="3.0.1.1" targetFramework="net461" />
   <package id="NUnit" version="3.5.0" targetFramework="net461" />
 </packages>
