--- a/NancyWithTokens/NancyWithTokens.WebSite/NancyWithTokens.WebSite.csproj
+++ b/NancyWithTokens/NancyWithTokens.WebSite/NancyWithTokens.WebSite.csproj
@@ -44,9 +44,17 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JWT, Version=1.3.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\JWT.1.3.4\lib\3.5\JWT.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Nancy, Version=1.4.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Nancy.1.4.3\lib\net40\Nancy.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Nancy.Authentication.Stateless, Version=1.4.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Nancy.Authentication.Stateless.1.4.1\lib\net40\Nancy.Authentication.Stateless.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Nancy.Hosting.Aspnet">
@@ -68,8 +76,17 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Authentication\Claim.cs" />
+    <Compile Include="Authentication\IJwtKeyProvider.cs" />
+    <Compile Include="Authentication\JwtKeyProvider.cs" />
+    <Compile Include="Authentication\IStatelessAuthConfigurationFactory.cs" />
+    <Compile Include="Authentication\Jwt.cs" />
+    <Compile Include="Authentication\StatelessAuthConfigurationFactory.cs" />
+    <Compile Include="Authentication\ValidUser.cs" />
+    <Compile Include="Bootstrap.cs" />
     <Compile Include="Health.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Secure.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
