--- a/NancyWithTokens/NancyWithTokens.WebSite/Web.config
+++ b/NancyWithTokens/NancyWithTokens.WebSite/Web.config
@@ -4,28 +4,27 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<!--
-	 For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+    <appSettings>
+        <!-- JWT things -->
+        <add key="audience" value="" />
+        <add key="issuer" value="" />
+        <add key="key" value="" />
+    </appSettings>
 
-	 The following attributes can be set on the <httpRuntime> tag.
-		<system.Web>
-		  <httpRuntime targetFramework="4.6.1" />
-		</system.Web>
-  -->
-	<system.web>
-		<compilation debug="true" targetFramework="4.6.1" />
+    <system.web>
+        <compilation debug="true" targetFramework="4.6.1" />
 
-		<pages controlRenderingCompatibilityVersion="4.0" />
-		<httpHandlers>
-			<add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-		</httpHandlers>
-	</system.web>
+        <pages controlRenderingCompatibilityVersion="4.0" />
+        <httpHandlers>
+            <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
+        </httpHandlers>
+    </system.web>
 
-	<system.webServer>
-		<validation validateIntegratedModeConfiguration="false" />
-		<httpErrors existingResponse="PassThrough" />
-		<handlers>
-			<add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-		</handlers>
-	</system.webServer>
+    <system.webServer>
+        <validation validateIntegratedModeConfiguration="false" />
+        <httpErrors existingResponse="PassThrough" />
+        <handlers>
+            <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
+        </handlers>
+    </system.webServer>
 </configuration>
