--- a/NancyWithTokens/NancyWithTokens.WebSite/packages.config
+++ b/NancyWithTokens/NancyWithTokens.WebSite/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="JWT" version="1.3.4" targetFramework="net461" />
   <package id="Nancy" version="1.4.3" targetFramework="net461" />
+  <package id="Nancy.Authentication.Stateless" version="1.4.1" targetFramework="net461" />
   <package id="Nancy.Hosting.Aspnet" version="1.4.1" requireReinstallation="true" />
 </packages>
