Work on an example for protected methods. Updated MediatR example. Other example cleanup.

--- a/MediatrDecorators/MediatrDecorators/packages.config
+++ b/MediatrDecorators/MediatrDecorators/packages.config
@@ -1,15 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.2.0" targetFramework="net462" />
-  <package id="FluentAssertions" version="4.15.0" targetFramework="net462" />
-  <package id="FluentValidation" version="6.2.1.0" targetFramework="net462" />
-  <package id="MediatR" version="2.1.0" targetFramework="net462" />
+  <package id="Castle.Core" version="4.2.0" targetFramework="net462" />
+  <package id="FluentAssertions" version="5.2.0" targetFramework="net462" />
+  <package id="FluentValidation" version="7.5.2" targetFramework="net462" />
+  <package id="MediatR" version="4.1.0" targetFramework="net462" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net462" />
   <package id="Microsoft.NETCore.Targets" version="1.0.1" targetFramework="net462" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net462" />
   <package id="NETStandard.Library" version="1.6.0" targetFramework="net462" />
-  <package id="Ninject" version="3.2.2.0" targetFramework="net462" />
-  <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net462" />
+  <package id="Ninject" version="3.3.4" targetFramework="net462" />
+  <package id="Ninject.Extensions.Conventions" version="3.3.0" targetFramework="net462" />
+  <package id="Ninject.Extensions.Factory" version="3.3.2" targetFramework="net462" />
   <package id="NUnit" version="3.5.0" targetFramework="net462" />
   <package id="runtime.native.System" version="4.0.0" targetFramework="net462" />
   <package id="runtime.native.System.IO.Compression" version="4.1.0" targetFramework="net462" />
@@ -17,7 +18,9 @@
   <package id="System.AppContext" version="4.1.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.0.0" targetFramework="net462" />
   <package id="System.Collections" version="4.0.11" targetFramework="net462" />
-  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net462" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net462" />
+  <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Console" version="4.0.0" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net462" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net462" />
@@ -58,6 +61,7 @@
   <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.0.0" targetFramework="net462" />
   <package id="System.Threading.Timer" version="4.0.1" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
   <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net462" />
 </packages>
